syntax = "proto3";

option go_package = "github.com/aserto-dev/aserto-idp/pkg/proto;proto";

package proto;

import "aserto/api/v1/user.proto";
import "google/protobuf/struct.proto";

message HelpRequest {
}

message HelpResponse {
    google.protobuf.Struct HelpStruct = 1;
}

message LoadUsersRequest{
    string source = 1;
}

message LoadUsersResponse{
    repeated aserto.api.v1.User user = 1;
}

service Provider {
    rpc Help(HelpRequest) returns (HelpResponse);
    rpc LoadUsers(LoadUsersRequest) returns (LoadUsersResponse);
}
